# simple-salesforce-extends

./: LICENSE  Pipfile  README.md  pyproject.toml  setup.py
src/simple-salesforce-extends/: salesforce_extends.py
src/simple_salesforce_extends/: __init__.py  salesforce_extends.py
src/tests/: test_salesforce_client_credential.py
